--- a/tapas_redesign/css/style.css
+++ b/tapas_redesign/css/style.css
@@ -11406,6 +11406,21 @@ a.back-to-top .fa, a.back-to-top a.tabledrag-handle .handle, a.tabledrag-handle 
   word-wrap: break-word;
 }
 
+.reader_tei {
+  width: 100%;
+  height: 500px;
+  padding: 5px;
+  position: relative;
+}
+
+#ace {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
 #homebox .homebox-column {
   background: none;
 }
